	- RPMMIRE_DEFAULT is overkill, use RPMMIRE_STRCMP instead (#103851).
	- don't use mktemp if mkstemp is available (#103850).
	- use -fPIC -DPIC on all platforms, not just mandatory (#112713).
	- python: return None for NEVRAO, [] for everything else.
	- python: throw exception on bad arg to labelCompare (#113661).
	- re-add --enable-posixmutexes to build.

4.2.1 -> 4.2.2:
	- unify signal handling in librpmio, use condvar to deliver signal.
	- make peace with libtool-1.5, autoconf-2.59, automake-1.8.
	- build with db-4.2.52 internal.
	- refresh bsddb.
	- detect (and remove) dbenv files while upgrading to db-4.2.52.
	- ensure that librpmdb links against just built, not system, librpmio.
	- fix: dangling pointer brain fart (#107835).
	- fix: ds.Single() method needs malloc'd elements (#109919).
	- convert ja and ko man pages to utf8 (#106050).
	- man page corrections (#106415).
	- perl.req typo (#106672).
	- fix: wrong package count for trigger scriptlet 1st arg (#100509).
	- fix: don't break header SHA1 if non-existent user/group (#97727).
	- remove fuids/fgids from rpmfi, easier to lookup fuser/fgroup instead.
	- merge sensible parts of openpkg rpm.patch.bugfix (#104780).
	- mark _javadocdir as documentation (#102898).
	- flush pipe before exit 1 in check-files (#103867).
	- perl.req: avoid regex misfire on '^use' in "= <<" assign (#109934).
	- find-debuginfo.sh: permit stripping unwritable by non-root (#112429).
	- missing build dependency (#111104).
	- spelling corrections (#112728).
	- popt: pad to display length, not strlen, for i18n popt args (#106240).
	- python: include Python.h before glibc features.h.
	- python: return [], not None, accessing header tags (#112794).
	- python: avoid invoking python to acquire ill-specified parameters.

4.2 -> 4.2.1:
	- fix: nested %if handling, optind initialization posix vs. glibc.
	- add version check for package with provides and obsoletes.
	- hack out O_DIRECT support in db4 for now.